fixing background fixed problem on mobile

--- a/styles/style.css
+++ b/styles/style.css
@@ -56,12 +56,19 @@ h1 {
 h2 {
     font-size: 3em;
 }
-html {
+/*html {
     box-sizing: border-box;
     background-image: url("../images/Glacier_National_Park_sunset.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
+}*/
+html {
+    background: url("../images/Glacier_National_Park_sunset.jpg") no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 .score_question,
 .statsboxinfo {
@@ -147,9 +154,6 @@ li {
     }
     .clicktobegin {
         width: 50%;
-    }
-    .header {
-        padding: 10px;
     }
     li {
         margin: 0;
